crates/compiler/parse/tests/snapshots/fail/comment_with_tab.expr.roc
# comment with a 	
4